# iuml-dumper

./: README.md  iuml-Dumper.docm
iUML_dumper_run/SWATS/: domains.bat  domains.txt  projects.bat
unix/: CMakeLists.txt  README  iuml.patch  setupenv.sh
unix/apigen/: CMakeLists.txt
unix/apigen/src/: APIGenAttribute.cc  APIGenAttribute.hh  APIGenDomain.cc  APIGenDomain.hh  APIGenMain.cc  APIGenObject.cc  APIGenObject.hh  APIGenRelationship.cc  APIGenRelationship.hh  APIGenUtils.cc  APIGenUtils.hh
unix/iumlapi/: CMakeLists.txt
unix/iumlapi/gen-src/: BS.rel  BS.sub  ORG.rel  ORG.sub  ORG_Database.class_extras.hh  ORG_Database.extras.cc  ORG_Domain.class_extras.hh  ORG_Domain.extras.cc  ORG_DomainVersion.class_extras.hh  ORG_DomainVersion.extras.cc  ORG_Project.class_extras.hh  ORG_Project.extras.cc  ORG_ProjectVersion.class_extras.hh  ORG_ProjectVersion.extras.cc  TAGS.rel  TAGS_Tag.class_extras.hh  TAGS_Tag.extras.cc  TAGS_TaggedItem.class_extras.hh  TAGS_TaggedItem.extras.cc  XUML.rel  XUML.sub  XUML_NonCounterpartTerminatorOperation.class_extras.hh  XUML_NonCounterpartTerminatorOperation.extras.cc  XUML_OperationParameter.class_extras.hh  XUML_OperationParameter.extras.cc  XUML_UserDefinedDataType.class_extras.hh  XUML_UserDefinedDataType.extras.cc  counterparts.txt  creates.txt  deletes.txt  lookups.txt
unix/iumlapi/include/: stdcomp.h
unix/iumlapi/include/iumlapi/: Entity.hh  Session.hh  Utils.hh  iUMLAPI.hh
unix/iumlapi/src/: Entity.cc  Session.cc  Utils.cc  iUMLAPI.cc
unix/maslgen/: CMakeLists.txt
unix/maslgen/src/: AssignerStateAction.cc  AssignerStateAction.hh  AssignerStateTransitionTable.cc  AssignerStateTransitionTable.hh  Attribute.cc  Attribute.hh  Bridge.cc  Bridge.hh  BridgeEvent.cc  BridgeEvent.hh  BridgeService.cc  BridgeService.hh  Callable.cc  Callable.hh  CodeFile.cc  CodeFile.hh  DataType.cc  DataType.hh  DeferredInstanceService.cc  DeferredInstanceService.hh  Domain.cc  Domain.hh  DomainService.cc  DomainService.hh  DumpModel.cc  DumpOptions.cc  DumpOptions.hh  Event.cc  Event.hh  EventAction.cc  EventAction.hh  External.cc  External.hh  Identifier.cc  Identifier.hh  Object.cc  Object.hh  ObjectInstanceService.cc  ObjectInstanceService.hh  Parameter.cc  (+30 more)
unix/utils/: CMakeLists.txt
unix/utils/src/: CreateTags.cc  DuplicateVersion.cc  FreezeVersion.cc  MaslTags.cc  MaslTags.hh  ShowVersions.cc  TranslatorTags.cc  TranslatorTags.hh
winmods/: APIGenMain.cc  Bridge.cc  BridgeEvent.cc  BridgeService.cc  BridgeService.hh  CMakeLists (within iumlapi).txt  Callable.cc  CodeFile.cc  CreateTags.cc  Domain.cc  DomainService.cc  DomainService.hh  DumpModel.cc  DumpOptions.cc  DuplicateVersion.cc  Entity.cc  Event.cc  EventAction.cc  FreezeVersion.cc  MaslTags.cc  Object.cc  ObjectInstanceService.cc  ObjectInstanceService.hh  Project.cc  ProjectDomain.cc  README.adoc  Service.cc  ShowVersions.cc  StateAction.cc  StateAction.hh  TextUtils.cc  TranslatorTags.cc  UpdateModel.cc  iUMLAPI.cc
winmods2/: prepare_for_build.bat  readme.txt
winmods2/BuildPrep/: run-cmake.bat  runAll.bat  setupenv.bat
winmods2/Source/: Attribute.cc  Bridge.cc  Callable.cc  CodeFile.cc  DataType.cc  Domain.cc  Domain.hh  Event.cc  Object.cc  Project.cc  ProjectDomain.cc  Relationship.cc  Scenario.cc  SuperSubtype.cc  TagSet.cc  Utils.cc  Utils.hh
